--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "chai": "^4.0.2",
     "css-loader": "^0.28.4",
+    "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "react": "^0.14.6",
     "react-bootstrap": "^0.31.0",
@@ -32,7 +34,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
     "start": "npm run build && node server.js",
     "build": "webpack --config webpack.config.js"
   },
